kustomize/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web
  ports:
  - name: 8080-tcp 
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: 80-tcp 
    port: 80
    targetPort: 80
    protocol: TCP
