kustomize/base/web-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: web
  labels:
    app: web
spec:
  host: qualtrics-lti-dev.tl.it.umich.edu 
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to: 
    kind: Service
    name: qualtrics-lti-web-dev
    weight: 100
  wildcardPolicy: None
